libview: Implement AtkHypertext interface

https://bugzilla.gnome.org/show_bug.cgi?id=639403